--- a/.github/workflows/deploy-ha.yml
+++ b/.github/workflows/deploy-ha.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   deploy-homeassistant:
-    runs-on: [self-hosted, homeassistance]
+    runs-on: [self-hosted]
 
     steps:
       - name: Checkout repository
