--- a/.github/workflows/deploy-ha.yml
+++ b/.github/workflows/deploy-ha.yml
@@ -1,15 +1,83 @@
 name: Deploy Home Assistant
 
 on:
-  workflow_dispatch:  # Just a button!
+  workflow_dispatch:
 
 jobs:
   deploy-homeassistant:
     runs-on: [self-hosted]
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Setup homelab directory structure
+        run: |
+          echo "📁 Setting up homelab directory structure..."
+          mkdir -p ~/homelab
+          echo "✅ Directory structure ready"
+
+      - name: Clone infra repository
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+          GH_USERNAME: ${{ secrets.GH_USERNAME }}
+        run: |
+          echo "📦 Cloning homelab-infra repository..."
+          
+          # Remove old infra if exists
+          if [[ -d ~/homelab/infra ]]; then
+            echo "Removing old infra..."
+            rm -rf ~/homelab/infra
+          fi
+          
+          # Clone infra repo
+          git clone \
+            https://${GH_USERNAME}:${GH_PAT}@github.com/johantre/homelab-infra.git \
+            ~/homelab/infra
+          
+          # Verify
+          if [[ ! -f ~/homelab/infra/site.yml ]]; then
+            echo "❌ CRITICAL: site.yml not found in infra repo!"
+            exit 1
+          fi
+          
+          echo "✅ Infra repository cloned"
+          
+          # Change to infra directory for rest of workflow
+          cd ~/homelab/infra
+
+      - name: Clone config repository
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+          GH_USERNAME: ${{ secrets.GH_USERNAME }}
+        run: |
+          echo "📦 Cloning homelab-config repository..."
+          
+          # Remove old config if exists
+          if [[ -d ~/homelab/config ]]; then
+            echo "Removing old config..."
+            rm -rf ~/homelab/config
+          fi
+          
+          # Clone config repo
+          git clone \
+            https://${GH_USERNAME}:${GH_PAT}@github.com/johantre/homelab-config.git \
+            ~/homelab/config
+          
+          # Verify homeassistant directory exists
+          if [[ ! -d ~/homelab/config/homeassistant ]]; then
+            echo "❌ CRITICAL: homeassistant directory not found!"
+            echo "Config repo contents:"
+            ls -la ~/homelab/config/
+            exit 1
+          fi
+          
+          # Verify configuration.yaml exists
+          if [[ ! -f ~/homelab/config/homeassistant/configuration.yaml ]]; then
+            echo "❌ CRITICAL: configuration.yaml not found!"
+            exit 1
+          fi
+          
+          echo "✅ Config repository cloned"
+          echo "Homeassistant config preview:"
+          ls -la ~/homelab/config/homeassistant/ | head -n 5
 
       - name: Verify all secrets are present
         run: |
@@ -47,6 +115,8 @@ jobs:
       - name: Verify required files exist
         run: |
           echo "🔍 Checking required files..."
+          
+          cd ~/homelab/infra
           
           MISSING_FILES=()
           
@@ -103,10 +173,12 @@ jobs:
         run: |
           echo "🚀 Starting Home Assistant deployment..."
           
+          cd ~/homelab/infra
+          
           set -e
           set -o pipefail
           
-          # Simple - no IP needed! Runner IS the target.
+          # Run Ansible from infra directory
           ansible-playbook \
             -i inventories/hosts \
             site.yml \
@@ -193,5 +265,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ansible-deploy-log
-          path: ansible-deploy.log
+          path: ~/homelab/infra/ansible-deploy.log
           retention-days: 7
