--- a/roles/homeassistant/tasks/containers-update.yml
+++ b/roles/homeassistant/tasks/containers-update.yml
@@ -45,7 +45,7 @@
     chdir: "{{ ha_stack_dir }}"
   environment: "{{ compose_global_env | mandatory('compose_global_env undefined — env_boot skipped or failed') }}"
   register: ha_pull
-  changed_when: ha_pull.stdout | default('') ~ ha_pull.stderr | default('') is search('Downloaded') | bool
+  changed_when: (ha_pull.stdout | default('') ~ ha_pull.stderr | default('')) is search('Downloaded')
   tags: [ ha_update, containers_update ]
 
 - name: Docker compose up -d (all services)
@@ -59,5 +59,5 @@
     chdir: "{{ ha_stack_dir }}"
   environment: "{{ compose_global_env | mandatory('compose_global_env undefined — env_boot skipped or failed') }}"
   register: ha_up
-  changed_when: ha_up.stdout | default('') ~ ha_up.stderr | default('') is search('(?i)(recreated|recreating|created|creating|starting)') | bool
+  changed_when: (ha_up.stdout | default('') ~ ha_up.stderr | default('')) is search('(?i)(recreated|recreating|created|creating|starting)')
   tags: [ha_update, containers_update]
