Temp fix for linux box deploy to ha-ansible (hosts!)
* proper excludes
* copy create_ha_user to the target container

--- a/roles/homeassistant/tasks/bootstrap-auth.yml
+++ b/roles/homeassistant/tasks/bootstrap-auth.yml
@@ -50,8 +50,8 @@
   when: ha_bootstrap_enable | default(false)
 
 - name: Copy user creation script to container
-  command: >
-    docker cp {{ role_path }}/files/create_ha_user.py {{ ha_container_name }}:/tmp/create_ha_user.py
+  ansible.builtin.shell: >
+    docker cp /tmp/create_ha_user.py {{ ha_container_name }}:/tmp/create_ha_user.py
   when:
     - ha_bootstrap_enable | default(false)
     - ha_auth_list.stdout is search('Total users:\s*0')
