db's gone - wrong rsync copy pattern
* not recursive!

--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -139,7 +139,7 @@
       - "--no-group"
       - "--no-perms"
       - "--omit-dir-times"
-      - "--exclude=*.db*"
+      - "--exclude=**.db*"
       - "--exclude=*.log*"
       - "--exclude=.storage/"
       - "--exclude=deps/"
