split hosts file into separate ini files
* workflow
* README.md

--- a/.github/workflows/deploy-ha.yml
+++ b/.github/workflows/deploy-ha.yml
@@ -180,7 +180,7 @@ jobs:
           
           # Run Ansible from infra directory
           ansible-playbook \
-            -i inventories/hosts \
+            -i inventories/ha_target_local.ini \
             site.yml \
             -l ha_target \
             -vv \
