--- a/roles/homeassistant/tasks/os-update.yml
+++ b/roles/homeassistant/tasks/os-update.yml
@@ -28,12 +28,15 @@
     path: /var/run/reboot-required
   register: reboot_flag
 
-- name: Reboot if required
+- name: Reboot if required (bypass Ansible's local connection check)
   become: true
-  reboot:
-    msg: "Reboot triggered by Ansible after OS updates"
-    reboot_timeout: 900
-  delegate_to: 127.0.0.1
-  vars:
-    ansible_connection: ssh
+  ansible.builtin.shell: "sleep 2 && /sbin/reboot"
+  async: 1
+  poll: 0
+  when: reboot_flag.stat.exists
+
+- name: Wait for reboot to complete
+  ansible.builtin.wait_for_connection:
+    delay: 60
+    timeout: 900
   when: reboot_flag.stat.exists
