rollback os-update + prevent os_update from called
see ansible_connection=local in ha_ansible_local.ini

--- a/roles/homeassistant/tasks/os-update.yml
+++ b/roles/homeassistant/tasks/os-update.yml
@@ -28,15 +28,9 @@
     path: /var/run/reboot-required
   register: reboot_flag
 
-- name: Reboot if required (bypass Ansible's local connection check)
+- name: Reboot if required
   become: true
-  ansible.builtin.shell: "sleep 2 && /sbin/reboot"
-  async: 1
-  poll: 0
-  when: reboot_flag.stat.exists
-
-- name: Wait for reboot to complete
-  ansible.builtin.wait_for_connection:
-    delay: 60
-    timeout: 900
+  reboot:
+    msg: "Reboot triggered by Ansible after OS updates"
+    reboot_timeout: 900
   when: reboot_flag.stat.exists
