--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -102,7 +102,7 @@
 # Optional OS updates (runs only when --tags os_update is used)
 - name: Include OS updates (opt-in via tags)
   include_tasks: os-update.yml
-  tags: [os_update]
+  tags: [os_update, never]
 
 # Prepare target packages (Docker/Compose + rsync) before we sync the repo
 - name: Include docker install for target
