--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -223,12 +223,8 @@
 # Bring up/update the stack (CLI, no Python SDK required, using CF_TUNNEL_TOKEN as env var)
 - name: Bring up/update (no env file)
   no_log: true
-  ansible.builtin.command:
-    cmd: >
-      docker compose
-      -p {{ ha_project | quote }}
-      -f {{ ha_stack_dir }}/docker-compose.yml
-      up -d
+  ansible.builtin.shell: |
+    sg docker -c 'docker compose -p {{ ha_project | quote }} -f {{ ha_stack_dir }}/docker-compose.yml up -d'
   args:
     chdir: "{{ ha_stack_dir }}"
   environment: "{{ compose_global_env }}"
